--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "volta": {
+    "node": "20.19.2",
+    "yarn": "1.22.22"
   }
 }
