메뉴에 motion animation 적용
등장 시 opacity 로 등장 애니메이션 추가
호버 시 확대
클릭 시 축소 애니메이션 추가

TODO: SSR에서 등장 애니메이션이 발동하지 않아서 딜레이가 걸리는 것 처럼 보임. 다른 방법이 있는 지 찾아볼 것. 예) CSS 애니메이션으로 변경 등

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@notion-render/client": "^0.0.2",
     "@notionhq/client": "^2.2.15",
     "axios": "^1.7.9",
-    "framer-motion": "^11.15.0",
+    "motion": "^12.19.1",
     "next": "15.1.2",
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
